Color contrast fixes

--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -24,6 +24,7 @@ body > header {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1000;
 }
 
 body > main {
