--- a/src/components/_nav.scss
+++ b/src/components/_nav.scss
@@ -18,7 +18,7 @@ nav {
 
     &:hover {
       background: $color-2;
-      color: $color-1;
+      color: $color-4;
     }
   }
 
